[gd_scene load_steps=6 format=2]

[ext_resource path="res://DefaultArcade.gd" type="Script" id=1]
[ext_resource path="res://Assets/DefaultArcadeBKG.png" type="Texture" id=2]
[ext_resource path="res://Assets/DefaultArcadeText.png" type="Texture" id=3]
[ext_resource path="res://Assets/AsteroidsText.png" type="Texture" id=4]
[ext_resource path="res://Assets/PongText.png" type="Texture" id=5]

[node name="DefaultArcade" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="D_Screen" type="TextureRect" parent="."]
modulate = Color( 0.388235, 1, 0.384314, 1 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="Default" type="TextureRect" parent="."]
margin_right = 512.0
margin_bottom = 300.0
texture = ExtResource( 3 )

[node name="A_Screen" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 0.392157, 0.384314, 1 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="AText" type="TextureRect" parent="."]
visible = false
margin_right = 512.0
margin_bottom = 300.0
texture = ExtResource( 4 )

[node name="P_Screen" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.392157, 0.392157, 1, 1 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="PText" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )
